Update the examples

--- a/examples/wind_farm/CMakeLists.txt
+++ b/examples/wind_farm/CMakeLists.txt
@@ -7,13 +7,16 @@ endif()
 # Create symlinks to nrel5mw.fst from test directory
 execute_process(COMMAND ${CMAKE_COMMAND} -E create_symlink
   ${CMAKE_BINARY_DIR}/reg_tests/test_files/nrel5MWactuatorLine/nrel5mw.fst
-  ${CMAKE_CURRENT_BINARY_DIR}/nrel5mw.fst)
+  ${CMAKE_CURRENT_BINARY_DIR}/case3/nrel5mw.fst)
 execute_process(COMMAND ${CMAKE_COMMAND} -E create_symlink
   ${CMAKE_BINARY_DIR}/reg_tests/test_files/nrel5MWactuatorLine/nrel5mw.fst
-  ${CMAKE_CURRENT_BINARY_DIR}/nrel5mw2.fst)
-execute_process(COMMAND ${CMAKE_COMMAND} -E create_symlink
-  ${CMAKE_SOURCE_DIR}/reg_tests/test_files/nrel5MWactuatorLine/nrel5MWactuatorLine.i
-  ${CMAKE_CURRENT_BINARY_DIR}/template_input_files/nrel5MWactuatorLine.i)
+  ${CMAKE_CURRENT_BINARY_DIR}/case3/nrel5mw2.fst)
 execute_process(COMMAND ${CMAKE_COMMAND} -E create_symlink
   ${CMAKE_SOURCE_DIR}/reg_tests/xml/milestone.xml
-  ${CMAKE_CURRENT_BINARY_DIR}/milestone.xml)
+  ${CMAKE_CURRENT_BINARY_DIR}/case1/milestone.xml)
+execute_process(COMMAND ${CMAKE_COMMAND} -E create_symlink
+  ${CMAKE_SOURCE_DIR}/reg_tests/xml/milestone.xml
+  ${CMAKE_CURRENT_BINARY_DIR}/case2/milestone.xml)
+execute_process(COMMAND ${CMAKE_COMMAND} -E create_symlink
+  ${CMAKE_SOURCE_DIR}/reg_tests/xml/milestone.xml
+  ${CMAKE_CURRENT_BINARY_DIR}/case3/milestone.xml)
