removing concept of frames from input file. Setting up MeshMotionAlg to deal only with moving frames and MeshTransformationAlg to deal only with reference frames

--- a/src/mesh_motion/CMakeLists.txt
+++ b/src/mesh_motion/CMakeLists.txt
@@ -9,6 +9,7 @@ target_sources(nalu PRIVATE
    ${CMAKE_CURRENT_SOURCE_DIR}/MeshDisplacementEquationSystem.C
    ${CMAKE_CURRENT_SOURCE_DIR}/MeshDisplacementMassBackwardEulerNodeSuppAlg.C
    ${CMAKE_CURRENT_SOURCE_DIR}/MeshMotionAlg.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/MeshTransformationAlg.C
    ${CMAKE_CURRENT_SOURCE_DIR}/MotionBase.C
    ${CMAKE_CURRENT_SOURCE_DIR}/MotionPulsatingSphere.C
    ${CMAKE_CURRENT_SOURCE_DIR}/MotionRotation.C
