modify mesh motion module terminology  (#587)
* modify mesh motion module terminology and turn mesh motion flag off under inital displacement

* removing concept of frames from input file. Setting up MeshMotionAlg to deal only with moving frames and MeshTransformationAlg to deal only with reference frames

* modifying documentation to reflect obsolete concept of frames and include mesh transformation

* remove obsolote constructor arguments

* defualt meshTransformation_ to false

* adding flexibility for user to apply motion/transformation to entire mesh

--- a/src/mesh_motion/CMakeLists.txt
+++ b/src/mesh_motion/CMakeLists.txt
@@ -4,11 +4,12 @@ target_sources(nalu PRIVATE
    ${CMAKE_CURRENT_SOURCE_DIR}/MeshDisplacementEquationSystem.C
    ${CMAKE_CURRENT_SOURCE_DIR}/MeshDisplacementMassBackwardEulerNodeSuppAlg.C
    ${CMAKE_CURRENT_SOURCE_DIR}/FrameBase.C
-   ${CMAKE_CURRENT_SOURCE_DIR}/FrameInertial.C
-   ${CMAKE_CURRENT_SOURCE_DIR}/FrameNonInertial.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/FrameMoving.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/FrameReference.C
    ${CMAKE_CURRENT_SOURCE_DIR}/MeshDisplacementEquationSystem.C
    ${CMAKE_CURRENT_SOURCE_DIR}/MeshDisplacementMassBackwardEulerNodeSuppAlg.C
    ${CMAKE_CURRENT_SOURCE_DIR}/MeshMotionAlg.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/MeshTransformationAlg.C
    ${CMAKE_CURRENT_SOURCE_DIR}/MotionBase.C
    ${CMAKE_CURRENT_SOURCE_DIR}/MotionPulsatingSphere.C
    ${CMAKE_CURRENT_SOURCE_DIR}/MotionRotation.C
