--- a/reg_tests/CMakeLists.txt
+++ b/reg_tests/CMakeLists.txt
@@ -24,27 +24,14 @@ endif()
 if(NOT ${TEST_TOLERANCE} STREQUAL "")
   set(TOLERANCE ${TEST_TOLERANCE}) # User defined
 else(NOT ${TEST_TOLERANCE} STREQUAL "")
-  if(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
-    if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang"
-        OR "${CMAKE_CXX_COMPILER_ID}" STREQUAL "AppleClang")
-      set(TOLERANCE 0.05)
-    elseif ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
-      set(TOLERANCE 0.05)
-    elseif ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Intel")
-      set(TOLERANCE 0.05)
-    else()
-      set(TOLERANCE 0.05) # Mac default
-    endif()
-  elseif(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
-    if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
-      set(TOLERANCE 0.0001)
-    elseif ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
-      set(TOLERANCE 0.000000000000001)
-    elseif ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Intel")
-      set(TOLERANCE 0.05)
-    else()
-      set(TOLERANCE 0.0000001) # Linux default
-    endif()
+  # Golds are generated with Linux GCC 7.4.0
+  if(${CMAKE_SYSTEM_NAME} MATCHES "Linux"
+     AND "${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU"
+     AND ${CMAKE_CXX_COMPILER_VERSION} VERSION_GREATER_EQUAL 7.0
+     AND ${CMAKE_CXX_COMPILER_VERSION} VERSION_LESS 8.0)
+    set(TOLERANCE 0.000000000000001)
+  else()
+    set(TOLERANCE 0.05) # Otherwise set some useless default
   endif()
 endif()
 message(STATUS "Using test tolerance of ${TOLERANCE}")
