--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,10 +4,29 @@ on:
   push:
     branches:
       - master
-      - f/ci
+    paths:
+      - 'cmake/**'
+      - 'include/**'
+      - 'src/**'
+      - 'unit_tests/**'
+      - 'CMakeLists.txt'
+      - 'CTestConfig.cmake'
+      - 'Dockerfile'
+      - 'nalu.C'
+      - 'unit_tests.C'
   pull_request:
     branches:
       - master
+    paths:
+      - 'cmake/**'
+      - 'include/**'
+      - 'src/**'
+      - 'unit_tests/**'
+      - 'CMakeLists.txt'
+      - 'CTestConfig.cmake'
+      - 'Dockerfile'
+      - 'nalu.C'
+      - 'unit_tests.C'
 
 jobs:
   build:
