--- a/src/edge_kernels/CMakeLists.txt
+++ b/src/edge_kernels/CMakeLists.txt
@@ -11,6 +11,7 @@ target_sources(nalu PRIVATE
   # Face/edge BC kernels
   ${CMAKE_CURRENT_SOURCE_DIR}/ContinuityOpenEdgeKernel.C
   ${CMAKE_CURRENT_SOURCE_DIR}/MomentumABLWallFuncEdgeKernel.C
+  ${CMAKE_CURRENT_SOURCE_DIR}/MomentumABLWallShearStressEdgeKernel.C
   ${CMAKE_CURRENT_SOURCE_DIR}/MomentumOpenEdgeKernel.C
   ${CMAKE_CURRENT_SOURCE_DIR}/MomentumSymmetryEdgeKernel.C
   ${CMAKE_CURRENT_SOURCE_DIR}/ScalarOpenEdgeKernel.C
