--- a/src/overset/CMakeLists.txt
+++ b/src/overset/CMakeLists.txt
@@ -7,6 +7,7 @@ target_sources(nalu PRIVATE
    ${CMAKE_CURRENT_SOURCE_DIR}/OversetInfo.C
    ${CMAKE_CURRENT_SOURCE_DIR}/OversetManager.C
    ${CMAKE_CURRENT_SOURCE_DIR}/UpdateOversetFringeAlgorithmDriver.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/ExtOverset.C
 )
 
 if(ENABLE_TIOGA)
@@ -15,5 +16,6 @@ if(ENABLE_TIOGA)
       ${CMAKE_CURRENT_SOURCE_DIR}/TiogaOptions.C
       ${CMAKE_CURRENT_SOURCE_DIR}/TiogaBlock.C
       ${CMAKE_CURRENT_SOURCE_DIR}/TiogaSTKIface.C
+      ${CMAKE_CURRENT_SOURCE_DIR}/TiogaRef.C
    )
 endif()
