32bit Hypre int support works. Changing many Hypre tests to run on 2 and not 4 cores due to reproducibility issues.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -42,6 +42,7 @@ if(ENABLE_CUDA)
   find_package(CUDA REQUIRED)
   target_link_libraries(nalu PUBLIC
     ${CUDA_cusparse_LIBRARY}
+    ${CUDA_curand_LIBRARY}
     ${CUDA_LIBRARIES}
     ${CUDA_CUBLAS_LIBRARIES})
 endif()
