--- a/src/mesh_motion/CMakeLists.txt
+++ b/src/mesh_motion/CMakeLists.txt
@@ -15,4 +15,5 @@ target_sources(nalu PRIVATE
    ${CMAKE_CURRENT_SOURCE_DIR}/MotionRotation.C
    ${CMAKE_CURRENT_SOURCE_DIR}/MotionScaling.C
    ${CMAKE_CURRENT_SOURCE_DIR}/MotionTranslation.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/MotionWaves.C
 )
