added the main Mesh Velocity Algorithms
updated the node_kernel mass,momentum and scalar

added ComputeVectorDivergence for scalar

added unittest

added the MotionDeformingInterior + updates to MotionRotation

added the Edge Solvers Algorithms in LowMachand Realm

small changes to ensure that things work

fixed the mesh_motion logic in ContinuityEdgeSolver and MdotEdgeAlg

clang-formatted MeshVelocityEdgeAlg.C

corrected BCs for MotionWaves + unit test

rebased with gcl -- unit tests not working + added an idealized wave option

small changes in ScalarMassBDFNodeKernel.C

clang-formatted files

make unit tests compatible with latest mesh motion framework

clang-formatted FrameMoving

convert deforming interior motion to be compatible with NGP mesh motion

add unit test for deformation of interior

undo clang format on Realm.C

Co-Authored by: ashesh2512 <36968394+ashesh2512@users.noreply.github.com>
Co-Authored by: Ganesh Vijayakumar <ganesh.vijayakumar@nrel.gov>

--- a/src/mesh_motion/CMakeLists.txt
+++ b/src/mesh_motion/CMakeLists.txt
@@ -4,6 +4,7 @@ target_sources(nalu PRIVATE
    ${CMAKE_CURRENT_SOURCE_DIR}/FrameReference.C
    ${CMAKE_CURRENT_SOURCE_DIR}/MeshMotionAlg.C
    ${CMAKE_CURRENT_SOURCE_DIR}/MeshTransformationAlg.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/MotionDeformingInteriorKernel.C
    ${CMAKE_CURRENT_SOURCE_DIR}/MotionPulsatingSphereKernel.C
    ${CMAKE_CURRENT_SOURCE_DIR}/MotionRotationKernel.C
    ${CMAKE_CURRENT_SOURCE_DIR}/MotionScalingKernel.C
