added the main Mesh Velocity Algorithms

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -118,6 +118,7 @@ add_subdirectory(edge_kernels)
 add_subdirectory(node_kernels)
 add_subdirectory(master_element)
 add_subdirectory(mesh_motion)
+add_subdirectory(gcl)
 add_subdirectory(ngp_algorithms)
 add_subdirectory(overset)
 add_subdirectory(property_evaluator)
