--- a/unit_tests/CMakeLists.txt
+++ b/unit_tests/CMakeLists.txt
@@ -51,5 +51,6 @@ add_subdirectory(ngp_algorithms)
 add_subdirectory(ho_kernels)
 add_subdirectory(ngp_kernels)
 add_subdirectory(mesh_motion)
+add_subdirectory(gcl)
 add_subdirectory(utils)
 add_subdirectory(matrix_free)
