Add in WALE and smagorinsky for matrix-free

--- a/src/matrix_free/CMakeLists.txt
+++ b/src/matrix_free/CMakeLists.txt
@@ -26,6 +26,7 @@ target_sources(nalu PRIVATE
    ${CMAKE_CURRENT_SOURCE_DIR}/LinearDiffusionMetric.C
    ${CMAKE_CURRENT_SOURCE_DIR}/LinearVolume.C
    ${CMAKE_CURRENT_SOURCE_DIR}/LobattoQuadratureRule.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/LocalDualNodalVolume.C
    ${CMAKE_CURRENT_SOURCE_DIR}/LowMachFields.C
    ${CMAKE_CURRENT_SOURCE_DIR}/LowMachGatheredFieldManager.C
    ${CMAKE_CURRENT_SOURCE_DIR}/LowMachUpdate.C
@@ -46,4 +47,5 @@ target_sources(nalu PRIVATE
    ${CMAKE_CURRENT_SOURCE_DIR}/StkToTpetraLocalIndices.C
    ${CMAKE_CURRENT_SOURCE_DIR}/StkToTpetraMap.C
    ${CMAKE_CURRENT_SOURCE_DIR}/SparsifiedEdgeLaplacian.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/TransportCoefficients.C
 )
