--- a/unit_tests/matrix_free/CMakeLists.txt
+++ b/unit_tests/matrix_free/CMakeLists.txt
@@ -29,6 +29,7 @@ target_sources(${utest_ex_name} PRIVATE
    ${CMAKE_CURRENT_SOURCE_DIR}/UnitTestLinearAdvectionMetric.C
    ${CMAKE_CURRENT_SOURCE_DIR}/UnitTestLinearVolume.C
    ${CMAKE_CURRENT_SOURCE_DIR}/UnitTestLocalArray.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/UnitTestLocalDualNodalVolume.C
    ${CMAKE_CURRENT_SOURCE_DIR}/UnitTestLowMachUpdate.C
    ${CMAKE_CURRENT_SOURCE_DIR}/UnitTestMatrixFreeSolver.C
    ${CMAKE_CURRENT_SOURCE_DIR}/UnitTestMomentumDiagonal.C
@@ -43,4 +44,5 @@ target_sources(${utest_ex_name} PRIVATE
    ${CMAKE_CURRENT_SOURCE_DIR}/UnitTestStkSimdNodeConnectivityMap.C
    ${CMAKE_CURRENT_SOURCE_DIR}/UnitTestStkSimdFaceConnectivityMap.C
    ${CMAKE_CURRENT_SOURCE_DIR}/UnitTestStkSimdGatheredElementData.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/UnitTestTransportCoefficients.C
 )
