--- a/src/matrix_free/CMakeLists.txt
+++ b/src/matrix_free/CMakeLists.txt
@@ -37,8 +37,8 @@ target_sources(nalu PRIVATE
    ${CMAKE_CURRENT_SOURCE_DIR}/MomentumOperator.C
    ${CMAKE_CURRENT_SOURCE_DIR}/MomentumSolutionUpdate.C
    ${CMAKE_CURRENT_SOURCE_DIR}/NodeOrderMap.C
-   ${CMAKE_CURRENT_SOURCE_DIR}/ScalarDirichletBC.C
    ${CMAKE_CURRENT_SOURCE_DIR}/ScalarFluxBC.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/StrongDirichletBC.C
    ${CMAKE_CURRENT_SOURCE_DIR}/StkSimdConnectivityMap.C
    ${CMAKE_CURRENT_SOURCE_DIR}/StkSimdNodeConnectivityMap.C
    ${CMAKE_CURRENT_SOURCE_DIR}/StkSimdFaceConnectivityMap.C
