--- a/src/actuator/CMakeLists.txt
+++ b/src/actuator/CMakeLists.txt
@@ -4,6 +4,7 @@ target_sources(nalu PRIVATE
    ${CMAKE_CURRENT_SOURCE_DIR}/ActuatorParsing.C
    ${CMAKE_CURRENT_SOURCE_DIR}/ActuatorSearch.C
    ${CMAKE_CURRENT_SOURCE_DIR}/ActuatorFunctors.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/ActuatorFLLC.C
    ${CMAKE_CURRENT_SOURCE_DIR}/ActuatorSimple.C
    ${CMAKE_CURRENT_SOURCE_DIR}/ActuatorLineSimple.C
    ${CMAKE_CURRENT_SOURCE_DIR}/ActuatorBulkSimple.C
