--- a/unit_tests/actuator/CMakeLists.txt
+++ b/unit_tests/actuator/CMakeLists.txt
@@ -5,14 +5,15 @@ target_sources(${utest_ex_name} PRIVATE
    ${CMAKE_CURRENT_SOURCE_DIR}/UnitTestActuatorSearch.C
    ${CMAKE_CURRENT_SOURCE_DIR}/UnitTestActuatorFunctors.C
    ${CMAKE_CURRENT_SOURCE_DIR}/UnitTestActuatorParsingSimple.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/UnitTestActuatorFLLC.C
 )
 if(ENABLE_OPENFAST)
    target_sources(${utest_ex_name} PRIVATE
       ${CMAKE_CURRENT_SOURCE_DIR}/UnitTestActuatorFASTUtilities.C
       ${CMAKE_CURRENT_SOURCE_DIR}/UnitTestActuatorFASTGaussian.C
       ${CMAKE_CURRENT_SOURCE_DIR}/UnitTestActuatorParsingFAST.C
-   	  ${CMAKE_CURRENT_SOURCE_DIR}/UnitTestActuatorBulkFAST.C
-   	  ${CMAKE_CURRENT_SOURCE_DIR}/UnitTestActuatorFunctorsFAST.C
-   	  ${CMAKE_CURRENT_SOURCE_DIR}/UnitTestActuatorBulkDiskFAST.C
+   	${CMAKE_CURRENT_SOURCE_DIR}/UnitTestActuatorBulkFAST.C
+   	${CMAKE_CURRENT_SOURCE_DIR}/UnitTestActuatorFunctorsFAST.C
+   	${CMAKE_CURRENT_SOURCE_DIR}/UnitTestActuatorBulkDiskFAST.C
    )
 endif()
