Handle hypre init logic on older hypre versions

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -107,13 +107,16 @@ if(ENABLE_HYPRE)
   target_link_libraries(nalu PUBLIC ${HYPRE_LIBRARIES})
   target_include_directories(nalu SYSTEM PUBLIC ${HYPRE_INCLUDE_DIRS})
   target_compile_definitions(nalu PUBLIC NALU_USES_HYPRE)
+  cmake_policy(SET CMP0075 NEW)
   include(CheckCXXSymbolExists)
+  include(CheckIncludeFileCXX)
   set(CMAKE_REQUIRED_INCLUDES "${HYPRE_INCLUDE_DIRS}")
   set(CMAKE_REQUIRED_LIBRARIES "${HYPRE_LIBRARIES}")
   check_cxx_symbol_exists(
     HYPRE_BIGINT "${HYPRE_INCLUDE_DIRS}/HYPRE_config.h" NALU_HYPRE_BIGINT)
   check_cxx_symbol_exists(
     hypre_KRYLOV_COGMRES_HEADER "${HYPRE_INCLUDE_DIRS}/krylov.h" NALU_HYPRE_COGMRES)
+  check_include_file_cxx("_hypre_utilities.hpp" NALU_HYPRE_CUDA_INTERFACE)
   if(NOT NALU_HYPRE_BIGINT)
     message(WARNING
       "HYPRE does not enable 64-bit integer support; will fail on large problems!")
@@ -122,6 +125,11 @@ if(ENABLE_HYPRE)
     target_compile_definitions(nalu PUBLIC HYPRE_COGMRES)
   else()
     message(STATUS "Disabling HYPRE CO-GMRES interface")
+  endif()
+  if (NALU_HYPRE_CUDA_INTERFACE)
+    target_compile_definitions(nalu PUBLIC NALU_HYPRE_CUDA_INTERFACE)
+  elseif(ENABLE_CUDA)
+    message(WARNING "HYPRE version does not provide CUDA interface. Execution on GPUs will result in degraded performance. Please upgrade to v2.18 or later")
   endif()
 endif()
 
