--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -109,14 +109,12 @@ if(ENABLE_HYPRE)
   target_compile_definitions(nalu PUBLIC NALU_USES_HYPRE)
   cmake_policy(SET CMP0075 NEW)
   include(CheckCXXSymbolExists)
-  include(CheckIncludeFileCXX)
   set(CMAKE_REQUIRED_INCLUDES "${HYPRE_INCLUDE_DIRS}")
   set(CMAKE_REQUIRED_LIBRARIES "${HYPRE_LIBRARIES}")
   check_cxx_symbol_exists(
     HYPRE_BIGINT "${HYPRE_INCLUDE_DIRS}/HYPRE_config.h" NALU_HYPRE_BIGINT)
   check_cxx_symbol_exists(
     hypre_KRYLOV_COGMRES_HEADER "${HYPRE_INCLUDE_DIRS}/krylov.h" NALU_HYPRE_COGMRES)
-  check_include_file_cxx("_hypre_utilities.hpp" NALU_HYPRE_CUDA_INTERFACE)
   if(NOT NALU_HYPRE_BIGINT)
     message(WARNING
       "HYPRE does not enable 64-bit integer support; will fail on large problems!")
@@ -126,10 +124,14 @@ if(ENABLE_HYPRE)
   else()
     message(STATUS "Disabling HYPRE CO-GMRES interface")
   endif()
-  if (NALU_HYPRE_CUDA_INTERFACE)
-    target_compile_definitions(nalu PUBLIC NALU_HYPRE_CUDA_INTERFACE)
-  elseif(ENABLE_CUDA)
-    message(WARNING "HYPRE version does not provide CUDA interface. Execution on GPUs will result in degraded performance. Please upgrade to v2.18 or later")
+  if (ENABLE_CUDA)
+    find_file(HYPRE_HAS_CUDA "_hypre_utilities.hpp" ${HYPRE_INCLUDE_DIRS})
+    if (HYPRE_HAS_CUDA)
+      target_compile_definitions(nalu PUBLIC NALU_HYPRE_CUDA_INTERFACE)
+      message(STATUS "HYPRE has CUDA support")
+    else()
+      message(WARNING "Using HYPRE version without CUDA support")
+    endif()
   endif()
 endif()
 
