--- a/reg_tests/test_files/SSTAMSChannelEdge/SSTAMSChannelEdge_rst.yaml
+++ b/reg_tests/test_files/SSTAMSChannelEdge/SSTAMSChannelEdge_rst.yaml
@@ -29,7 +29,7 @@ linear_solvers:
 realms:
 
   - name: realm_1
-    mesh: SSTTAMSChannelEdge.rst
+    mesh: SSTAMSChannelEdge.rst
     use_edges: yes 
     check_for_missing_bcs: yes
     support_inconsistent_multi_state_restart: yes
@@ -118,8 +118,8 @@ realms:
 
     solution_options:
       name: myOptions
-      turbulence_model: sst_tams
-      reset_TAMS_averages_on_init: true 
+      turbulence_model: sst_ams
+      reset_AMS_averages_on_init: true 
       projected_timescale_type: momentum_diag_inv
 
       fix_pressure_at_node:
@@ -178,13 +178,13 @@ realms:
             momentum: [1.00, 0.0, 0.0]
 
     restart:
-      restart_data_base_name: SSTTAMSChannelEdge-tams.rst
+      restart_data_base_name: SSTAMSChannelEdge-ams.rst
       restart_frequency: 10
       restart_start: 0
       restart_time: 100
 
     output:
-      output_data_base_name: SSTTAMSChannelEdge-tams.e
+      output_data_base_name: SSTAMSChannelEdge-ams.e
       output_frequency: 10
       output_node_set: no
       output_variables:
