--- a/reg_tests/test_files/SSTAMSOversetRotCylinder/SSTAMSOversetRotCylinder.yaml
+++ b/reg_tests/test_files/SSTAMSOversetRotCylinder/SSTAMSOversetRotCylinder.yaml
@@ -26,8 +26,9 @@ linear_solvers:
 realms:
 
   - name: realm_1
-    mesh: SSTTAMSOversetRotCylinder.rst
+    mesh: ../../mesh/oversetCylinder.g
     use_edges: yes
+    automatic_decomposition_type: rcb
     activate_aura: true
 
     equation_systems:
@@ -40,7 +41,6 @@ realms:
         specific_dissipation_rate: solve_scalar
         pressure: solve_cont
         ndtw: solve_cont
-        time_averaged_model_split: solve_cont
 
       systems:
         - WallDistance:
@@ -72,11 +72,6 @@ realms:
           velocity: [1.0,0.0,0.0]
           turbulent_ke: 0.095118
           specific_dissipation_rate: 2266.4
-          average_velocity: [1.0,0.0,0.0]
-          average_tke_resolved: 0.0
-          average_dudx: 0.0
-          k_ratio: 1.0
-          avg_res_adequacy_parameter: 1.0
 
     material_properties:
       target_name:
@@ -168,8 +163,7 @@ realms:
 
     solution_options:
       name: myOptions
-      turbulence_model: sst_tams
-      reset_TAMS_averages_on_init: true
+      turbulence_model: sst
       projected_timescale_type: momentum_diag_inv
 
       options:
@@ -212,7 +206,6 @@ realms:
 
         - turbulence_model_constants:
             SDRWallFactor: 0.625
-            forcingFactor: 8.0
 
     post_processing:
 
@@ -233,12 +226,12 @@ realms:
           compute_vorticity: yes
 
     restart:
-      restart_data_base_name: SSTTAMSOversetRotCylinder-tams.rst
+      restart_data_base_name: SSTAMSOversetRotCylinder.rst
       restart_frequency: 10
       restart_start: 0
 
     output:
-      output_data_base_name: SSTTAMSOversetRotCylinder-tams.exo
+      output_data_base_name: SSTAMSOversetRotCylinder.exo
       output_frequency: 10
       output_node_set: no
       output_variables:
@@ -258,17 +251,6 @@ realms:
        - turbulent_viscosity
        - element_courant
        - density
-       - average_velocity
-       - average_velocity_rtm
-       - k_ratio
-       - rans_time_scale
-       - average_mass_flow_rate
-       - average_tke_resolved
-       - avg_res_adequacy_parameter
-       - resolution_adequacy_parameter
-       - metric_tensor
-       - average_production
-       - average_dudx
 
 Time_Integrators:
   - StandardTimeIntegrator:
