--- a/reg_tests/test_files/SSTAMSOversetRotCylinder/SSTAMSOversetRotCylinder_rst.yaml
+++ b/reg_tests/test_files/SSTAMSOversetRotCylinder/SSTAMSOversetRotCylinder_rst.yaml
@@ -26,9 +26,8 @@ linear_solvers:
 realms:
 
   - name: realm_1
-    mesh: ../../mesh/oversetCylinder.g
+    mesh: SSTAMSOversetRotCylinder.rst
     use_edges: yes
-    automatic_decomposition_type: rcb
     activate_aura: true
 
     equation_systems:
@@ -41,6 +40,7 @@ realms:
         specific_dissipation_rate: solve_scalar
         pressure: solve_cont
         ndtw: solve_cont
+        time_averaged_model_split: solve_cont
 
       systems:
         - WallDistance:
@@ -72,6 +72,11 @@ realms:
           velocity: [1.0,0.0,0.0]
           turbulent_ke: 0.095118
           specific_dissipation_rate: 2266.4
+          average_velocity: [1.0,0.0,0.0]
+          average_tke_resolved: 0.0
+          average_dudx: 0.0
+          k_ratio: 1.0
+          avg_res_adequacy_parameter: 1.0
 
     material_properties:
       target_name:
@@ -163,7 +168,8 @@ realms:
 
     solution_options:
       name: myOptions
-      turbulence_model: sst
+      turbulence_model: sst_ams
+      reset_AMS_averages_on_init: true
       projected_timescale_type: momentum_diag_inv
 
       options:
@@ -206,6 +212,7 @@ realms:
 
         - turbulence_model_constants:
             SDRWallFactor: 0.625
+            forcingFactor: 8.0
 
     post_processing:
 
@@ -226,12 +233,12 @@ realms:
           compute_vorticity: yes
 
     restart:
-      restart_data_base_name: SSTTAMSOversetRotCylinder.rst
+      restart_data_base_name: SSTAMSOversetRotCylinder-ams.rst
       restart_frequency: 10
       restart_start: 0
 
     output:
-      output_data_base_name: SSTTAMSOversetRotCylinder.exo
+      output_data_base_name: SSTAMSOversetRotCylinder-ams.exo
       output_frequency: 10
       output_node_set: no
       output_variables:
@@ -251,6 +258,17 @@ realms:
        - turbulent_viscosity
        - element_courant
        - density
+       - average_velocity
+       - average_velocity_rtm
+       - k_ratio
+       - rans_time_scale
+       - average_mass_flow_rate
+       - average_tke_resolved
+       - avg_res_adequacy_parameter
+       - resolution_adequacy_parameter
+       - metric_tensor
+       - average_production
+       - average_dudx
 
 Time_Integrators:
   - StandardTimeIntegrator:
