--- a/reg_tests/test_files/amsChannelEdge/amsChannelEdge_rst.yaml
+++ b/reg_tests/test_files/amsChannelEdge/amsChannelEdge_rst.yaml
@@ -29,10 +29,10 @@ linear_solvers:
 realms:
 
   - name: realm_1
-    mesh: ../../mesh/periodicChannel.g
+    mesh: amsChannelEdge.rst
     use_edges: yes 
     check_for_missing_bcs: yes
-    automatic_decomposition_type: rcb
+    support_inconsistent_multi_state_restart: yes
 
     time_step_control:
      target_courant: 1.0
@@ -48,6 +48,7 @@ realms:
         specific_dissipation_rate: solve_scalar
         pressure: solve_cont
         ndtw: solve_cont
+        time_averaged_model_split: solve_cont
 
       systems:
         - WallDistance:
@@ -72,7 +73,12 @@ realms:
           pressure: 0
           velocity: [22.0,0.0,0.0]
           turbulent_ke: 0.05
-          specific_dissipation_rate: 3528.0 
+          specific_dissipation_rate: 3528.0
+          average_velocity: [22.78,0.0,0.0]
+          average_tke_resolved: 0.0
+          average_dudx: 0.0
+          k_ratio: 1.0
+          avg_res_adequacy_parameter: 1.0 
 
     material_properties:
       target_name: Unspecified-2-HEX
@@ -112,7 +118,8 @@ realms:
 
     solution_options:
       name: myOptions
-      turbulence_model: sst
+      turbulence_model: sst_ams
+      reset_AMS_averages_on_init: false 
       projected_timescale_type: momentum_diag_inv
 
       fix_pressure_at_node:
@@ -162,6 +169,7 @@ realms:
 
         - turbulence_model_constants:
             SDRWallFactor: 0.625
+            forcingFactor: 32.0
 
         - source_terms:
             momentum: body_force
@@ -170,16 +178,18 @@ realms:
             momentum: [1.00, 0.0, 0.0]
 
     restart:
-      restart_data_base_name: SSTTAMSChannelEdge.rst
+      restart_data_base_name: amsChannelEdge.rst-s001
       restart_frequency: 10
-      restart_start: 0
+      restart_start: 5
+      restart_time: 100
 
     output:
-      output_data_base_name: SSTTAMSChannelEdge.e
-      output_frequency: 10 
+      output_data_base_name: amsChannelEdge.e-s001
+      output_frequency: 10
       output_node_set: no
       output_variables:
        - velocity
+       - average_velocity
        - pressure
        - pressure_force
        - tau_wall
@@ -187,14 +197,23 @@ realms:
        - specific_dissipation_rate
        - minimum_distance_to_wall
        - turbulent_viscosity
+       - k_ratio
+       - rans_time_scale
+       - average_mass_flow_rate
+       - average_tke_resolved
+       - avg_res_adequacy_parameter
+       - resolution_adequacy_parameter
+       - metric_tensor
        - element_courant
+       - average_production
+       - average_dudx
 
 Time_Integrators:
   - StandardTimeIntegrator:
       name: ti_1
       start_time: 0
       time_step: 2.0e-3
-      termination_step_count: 10 
+      termination_step_count: 20
       time_stepping_type: fixed
       time_step_count: 0
       second_order_accuracy: yes
