--- a/src/ngp_algorithms/CMakeLists.txt
+++ b/src/ngp_algorithms/CMakeLists.txt
@@ -13,8 +13,8 @@ target_sources(nalu PRIVATE
   ${CMAKE_CURRENT_SOURCE_DIR}/MdotDensityAccumAlg.C
   ${CMAKE_CURRENT_SOURCE_DIR}/MdotOpenCorrectorAlg.C
   ${CMAKE_CURRENT_SOURCE_DIR}/MdotOpenEdgeAlg.C
-  ${CMAKE_CURRENT_SOURCE_DIR}/TAMSAvgMdotEdgeAlg.C
-  ${CMAKE_CURRENT_SOURCE_DIR}/SSTTAMSAveragesAlg.C
+  ${CMAKE_CURRENT_SOURCE_DIR}/AMSAvgMdotEdgeAlg.C
+  ${CMAKE_CURRENT_SOURCE_DIR}/SSTAMSAveragesAlg.C
   ${CMAKE_CURRENT_SOURCE_DIR}/MetricTensorElemAlg.C
   ${CMAKE_CURRENT_SOURCE_DIR}/TurbViscKsgsAlg.C
   ${CMAKE_CURRENT_SOURCE_DIR}/TurbViscSSTAlg.C
