--- a/src/node_kernels/CMakeLists.txt
+++ b/src/node_kernels/CMakeLists.txt
@@ -10,11 +10,11 @@ target_sources(nalu PRIVATE
   ${CMAKE_CURRENT_SOURCE_DIR}/MomentumMassBDFNodeKernel.C
   ${CMAKE_CURRENT_SOURCE_DIR}/MomentumActuatorNodeKernel.C
   ${CMAKE_CURRENT_SOURCE_DIR}/MomentumCoriolisNodeKernel.C
-  ${CMAKE_CURRENT_SOURCE_DIR}/MomentumSSTTAMSForcingNodeKernel.C
+  ${CMAKE_CURRENT_SOURCE_DIR}/MomentumSSTAMSForcingNodeKernel.C
   ${CMAKE_CURRENT_SOURCE_DIR}/ScalarGclNodeKernel.C
   ${CMAKE_CURRENT_SOURCE_DIR}/ScalarMassBDFNodeKernel.C
-  ${CMAKE_CURRENT_SOURCE_DIR}/SDRSSTTAMSNodeKernel.C
-  ${CMAKE_CURRENT_SOURCE_DIR}/TKESSTTAMSNodeKernel.C
+  ${CMAKE_CURRENT_SOURCE_DIR}/SDRSSTAMSNodeKernel.C
+  ${CMAKE_CURRENT_SOURCE_DIR}/TKESSTAMSNodeKernel.C
   ${CMAKE_CURRENT_SOURCE_DIR}/TKERodiNodeKernel.C
   ${CMAKE_CURRENT_SOURCE_DIR}/TKEKsgsNodeKernel.C
   ${CMAKE_CURRENT_SOURCE_DIR}/TKESSTNodeKernel.C
