Simplify logic for hypre cuda init/finalize

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -109,36 +109,17 @@ endif()
 ############################ HYPRE #####################################
 if(ENABLE_HYPRE)
   set(CMAKE_PREFIX_PATH ${HYPRE_DIR} ${CMAKE_PREFIX_PATH})
-  find_package(HYPRE QUIET REQUIRED)
+  find_package(HYPRE 2.18.2 REQUIRED)
   message(STATUS "Found HYPRE = ${HYPRE_DIR}")
   target_link_libraries(nalu PUBLIC ${HYPRE_LIBRARIES})
   target_include_directories(nalu SYSTEM PUBLIC ${HYPRE_INCLUDE_DIRS})
   target_compile_definitions(nalu PUBLIC NALU_USES_HYPRE)
-  cmake_policy(SET CMP0075 NEW)
   include(CheckCXXSymbolExists)
-  set(CMAKE_REQUIRED_INCLUDES "${HYPRE_INCLUDE_DIRS}")
-  set(CMAKE_REQUIRED_LIBRARIES "${HYPRE_LIBRARIES}")
   check_cxx_symbol_exists(
     HYPRE_BIGINT "${HYPRE_INCLUDE_DIRS}/HYPRE_config.h" NALU_HYPRE_BIGINT)
-  check_cxx_symbol_exists(
-    hypre_KRYLOV_COGMRES_HEADER "${HYPRE_INCLUDE_DIRS}/krylov.h" NALU_HYPRE_COGMRES)
   if(NOT NALU_HYPRE_BIGINT)
     message(WARNING
       "HYPRE does not enable 64-bit integer support; will fail on large problems!")
-  endif()
-  if (NALU_HYPRE_COGMRES)
-    target_compile_definitions(nalu PUBLIC HYPRE_COGMRES)
-  else()
-    message(STATUS "Disabling HYPRE CO-GMRES interface")
-  endif()
-  if (ENABLE_CUDA)
-    find_file(HYPRE_HAS_CUDA "_hypre_utilities.hpp" ${HYPRE_INCLUDE_DIRS})
-    if (HYPRE_HAS_CUDA)
-      target_compile_definitions(nalu PUBLIC NALU_HYPRE_CUDA_INTERFACE)
-      message(STATUS "HYPRE has CUDA support")
-    else()
-      message(WARNING "Using HYPRE version without CUDA support")
-    endif()
   endif()
 endif()
 
