Fix CDash build errors with CUDA
Reinstate `find_package(CUDA)` as this is necessary for adding the CUDA libraries used by hypre to the link line. FindCUDA is deprecated, but FindCUDAToolkit is not available until CMake 3.17

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -41,6 +41,7 @@ target_link_libraries(nalu PUBLIC $<$<BOOL:${MPI_Fortran_FOUND}>:MPI::MPI_Fortra
 
 if(ENABLE_CUDA)
   enable_language(CUDA)
+  find_package(CUDA)
   target_link_libraries(nalu PUBLIC
     ${CUDA_cusparse_LIBRARY}
     ${CUDA_curand_LIBRARY}
